--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "react": "^18",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18",
     "react-scroll": "^1.9.0"
   }
